--- a/resources/.github/CODEOWNERS
+++ b/resources/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # Github CODEOWNERS file
 
 # Global code-owners for this repository
-* @dblane-digicatapult @mattdean-digicatapult
+* @digicatapult/software-engineering
