Updated PR template itself

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
 # Github CODEOWNERS file
 
 # Global code-owners for this repository
-* @dblane-digicatapult @mattdean-digicatapult
+* @dblane-digicatapult @mattdean-digicatapult @msterle
