--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,6 @@
 name: Bug report
-description: Create a report to help us improve
+title: "[BUG] "
+description: Create a bug report to help us improve
 assignees: ["digicatapult/software-engineering"]
 labels: ["bug"]
 body:
