--- a/workflow-templates/synchronise-trunk-version-npm.yml
+++ b/workflow-templates/synchronise-trunk-version-npm.yml
@@ -13,3 +13,6 @@ jobs:
     uses: digicatapult/shared-workflows/.github/workflows/synchronise-trunk-version-npm.yml@main
     with:
       trunk-branch: $default-branch
+    secrets:
+      bot-id: ${{ secrets.BOT_ID }}
+      bot-key: ${{ secrets.BOT_KEY }}
